<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulClaro"
    tools:context=".Login.Login">

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/phUser"
        android:inputType="text"
        android:textColor="@color/azulOscuro"
        android:textColorHint="@color/azulOscuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267" />

    <EditText
        android:id="@+id/editTextContrasena"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/phContrasena"
        android:inputType="textPassword"
        android:textColor="@color/azulOscuro"
        android:textColorHint="@color/azulOscuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />


    <TextView
        android:id="@+id/textViewRecuperarContrasena"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/txtRecuperarContrasena"
        android:textColor="@color/azulOscuro"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/azulMedio"
        android:text="@string/btnLogin"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807" />
</androidx.constraintlayout.widget.ConstraintLayout>