<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulBlanco"
    tools:context=".ConsultarReunion.ConsultarReuniones">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="410dp"
        android:layout_height="463dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/descTablaHorarios">
            <TableLayout
                android:id="@+id/tablaHorariosCR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/azulBlanco"
                android:padding="8dp"
                android:stretchColumns="1,2,3,4,5,6" />
        </HorizontalScrollView>
    </ScrollView>

    <ImageButton
        android:id="@+id/imageButtonAtrasME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circular_button_background"
        android:contentDescription="@string/descBotonAtras"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/txtHorarios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtHorarios"
        android:textAllCaps="true"
        android:textColor="@color/azulOscuro"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

</androidx.constraintlayout.widget.ConstraintLayout>